RESOLVED FIXED269246
REGRESSION (273714@main): [ iOS 17 wk2 ] imported/w3c/web-platform-tests/css/css-fonts/font-size-adjust-zero-1.html is a consistent image failure
https://bugs.webkit.org/show_bug.cgi?id=269246
Summary REGRESSION (273714@main): [ iOS 17 wk2 ] imported/w3c/web-platform-tests/css/...
Attachments
Patch (2.07 KB, patch)
2024-02-15 08:25 PST, alan
no flags
Patch (2.93 KB, patch)
2024-02-15 08:47 PST, alan
no flags
Patch (145.01 KB, patch)
2024-02-15 10:58 PST, alan
no flags
[fast-cq]Patch (151.79 KB, patch)
2024-02-15 19:33 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-12 15:49:11 PST
Jay Stfleur
Comment 2 2024-02-12 16:13:25 PST
Reproducibility: run-webkit-tests --root --ios-simulator imported/w3c/web-platform-tests/css/css-fonts/font-size-adjust-zero-1.html --child-process=1 --iterations 10
Alexey Proskuryakov
Comment 3 2024-02-13 12:48:10 PST
Looks like this is caused by 273714@main.
alan
Comment 4 2024-02-15 08:25:45 PST
alan
Comment 5 2024-02-15 08:47:41 PST
alan
Comment 6 2024-02-15 10:58:33 PST
alan
Comment 7 2024-02-15 19:33:08 PST
Created attachment 469910 [details] [fast-cq]Patch
EWS
Comment 8 2024-02-16 05:07:54 PST
Committed 274818@main (d876c093f5a9): <https://commits.webkit.org/274818@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469910 [details].
Note You need to log in before you can comment on or make changes to this bug.