REGRESSION (273714@main): [ iOS 17 wk2 ] imported/w3c/web-platform-tests/css/css-fonts/font-size-adjust-zero-1.html is a consistent image failure https://bugs.webkit.org/show_bug.cgi?id=269246

Reviewed by Antti Koivisto.

Since 273714@main, InlineBox::preferredLineHeight returns non-integral value, but the
integral -> float transition can only happen here when ascent/descent become all non-integral.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::setLayoutBoundsForInlineBox const):

Canonical link: https://commits.webkit.org/274818@main